--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.8",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
