--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.11.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/express": "^5.0.0",
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.5",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
